fix spacing in body and html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,16 @@
 /* Styling across all three pages*/
 html {
-  height: 100%;
+  min-height: 100%;
 }
 
 body {
   background-color: whitesmoke;
   font-family: "Roboto", sans-serif;
-  height: 100%;
+  min-height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  margin: 0;
 }
 
 h1 {
